<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titlePage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/my_tasks"
                    android:textColor="#FFF"
                    android:textSize="32sp"/>
                <TextView
                    android:id="@+id/usernamePage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/username"
                    android:textColor="#E3CFCF"
                    android:textSize="18sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnAddNew"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/bg_btn_new"
                android:padding="0dp"
                android:text="@string/btn_plus"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="30sp"
                app:backgroundTint="@null"
                />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="28dp"
            android:background="#131E69"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ourDoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-60dp"
        android:layout_marginRight="16dp">

    </androidx.recyclerview.widget.RecyclerView>
    <TextView
        android:id="@+id/endPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/no_more_task"
        android:textAlignment="center"
        android:textColor="#9A9A9A"
        android:textSize="16sp"/>






</LinearLayout>